# haskell-socketeer

./: .gitignore  LICENSE  README.md  socketeer.cabal
src/Network/Socketeer/Client/: main.hs
src/Network/Socketeer/Server/: main.hs
test/: main.hs
