Name:                socketeer
Version:             0.1
Synopsis:            Socket client skeleton for Reaktor code camp
-- Description:         

License:             BSD3
License-file:        LICENSE

Author:              Harri Salokorpi
Maintainer:          hsalokor@gmail.com

Category:            Network

Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  

Cabal-version:       >=1.10

Executable socketeer-client
    Default-Language:   Haskell2010
    Main-is:            Network/Socketeer/Client/main.hs
    Hs-Source-Dirs:     src/
    Build-Depends:      base
                      , conduit >= 0.4.1.1
                      , network-conduit >= 0.4.0
                      , hspec >= 1.0.0.1

Executable socketeer-server
    Default-Language:   Haskell2010
    Main-is:            Network/Socketeer/Server/main.hs
    Hs-Source-Dirs:     src/
    Build-Depends:      base
                      , conduit >= 0.4.1.1
                      , network-conduit >= 0.4.0
                      , hspec >= 1.0.0.1
